target/src/PLParser.java
// Generated from ./src/PL.g4 by ANTLR 4.13.1

import backend.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, CONCAT=24, 
		STRING=25, ID=26, NUMBER=27, WHITESPACE=28, NEWLINE=29;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_statement = 2, RULE_expression = 3, 
		RULE_assignment = 4, RULE_print = 5, RULE_forLoop = 6, RULE_ifElse = 7, 
		RULE_compareOp = 8, RULE_funcDecl = 9, RULE_funcInvoke = 10, RULE_paramList = 11, 
		RULE_argList = 12, RULE_stringLiteral = 13, RULE_intLiteral = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "statement", "expression", "assignment", "print", 
			"forLoop", "ifElse", "compareOp", "funcDecl", "funcInvoke", "paramList", 
			"argList", "stringLiteral", "intLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'+'", "'-'", "'*'", "'='", "'print'", "'('", "')'", "'for'", 
			"'in'", "'..'", "'{'", "'}'", "'if'", "'else'", "'<'", "'<='", "'>'", 
			"'>='", "'=='", "'!='", "'function'", "','", "'++'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"CONCAT", "STRING", "ID", "NUMBER", "WHITESPACE", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	public PLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Expr expr;
		public BlockContext block;
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PLParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			((ProgramContext)_localctx).block = block();
			setState(31);
			match(EOF);
			 ((ProgramContext)_localctx).expr =  ((ProgramContext)_localctx).block.blockExpr; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public Expr blockExpr;
		public StatementContext statement;
		public List<StatementContext> statements = new ArrayList<StatementContext>();
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(PLParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PLParser.NEWLINE, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(34);
				((BlockContext)_localctx).statement = statement();
				((BlockContext)_localctx).statements.add(((BlockContext)_localctx).statement);
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0 || _la==NEWLINE) {
					{
					setState(35);
					_la = _input.LA(1);
					if ( !(_la==T__0 || _la==NEWLINE) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				}
				}
				setState(40); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 239092416L) != 0) );
			 
			        List<Expr> exprList = new ArrayList<Expr>();
			        for (StatementContext stmt : ((BlockContext)_localctx).statements) {
			            exprList.add(stmt.statementExpr);
			        }
			        ((BlockContext)_localctx).blockExpr =  new Block(exprList);
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Expr statementExpr;
		public AssignmentContext assignment;
		public FuncDeclContext funcDecl;
		public ForLoopContext forLoop;
		public IfElseContext ifElse;
		public PrintContext print;
		public ExpressionContext expression;
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public FuncDeclContext funcDecl() {
			return getRuleContext(FuncDeclContext.class,0);
		}
		public ForLoopContext forLoop() {
			return getRuleContext(ForLoopContext.class,0);
		}
		public IfElseContext ifElse() {
			return getRuleContext(IfElseContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(44);
				((StatementContext)_localctx).assignment = assignment();
				 ((StatementContext)_localctx).statementExpr =  ((StatementContext)_localctx).assignment.assignmentExpr; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				((StatementContext)_localctx).funcDecl = funcDecl();
				 ((StatementContext)_localctx).statementExpr =  ((StatementContext)_localctx).funcDecl.funcResult; 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(50);
				((StatementContext)_localctx).forLoop = forLoop();
				((StatementContext)_localctx).statementExpr =  ((StatementContext)_localctx).forLoop.forLoopExpr; 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(53);
				((StatementContext)_localctx).ifElse = ifElse();
				((StatementContext)_localctx).statementExpr =  ((StatementContext)_localctx).ifElse.ifElseExpr; 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(56);
				((StatementContext)_localctx).print = print();
				 ((StatementContext)_localctx).statementExpr =  ((StatementContext)_localctx).print.printExpr; 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(59);
				((StatementContext)_localctx).expression = expression(0);
				((StatementContext)_localctx).statementExpr =  ((StatementContext)_localctx).expression.expressionExpr; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public Expr expressionExpr;
		public ExpressionContext left;
		public FuncInvokeContext funcInvoke;
		public StringLiteralContext stringLiteral;
		public IntLiteralContext intLiteral;
		public CompareOpContext comparator;
		public ExpressionContext right;
		public FuncInvokeContext funcInvoke() {
			return getRuleContext(FuncInvokeContext.class,0);
		}
		public StringLiteralContext stringLiteral() {
			return getRuleContext(StringLiteralContext.class,0);
		}
		public IntLiteralContext intLiteral() {
			return getRuleContext(IntLiteralContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public CompareOpContext compareOp() {
			return getRuleContext(CompareOpContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(65);
				((ExpressionContext)_localctx).funcInvoke = funcInvoke();
				 ((ExpressionContext)_localctx).expressionExpr =  ((ExpressionContext)_localctx).funcInvoke.invokeResult; 
				}
				break;
			case 2:
				{
				setState(68);
				((ExpressionContext)_localctx).stringLiteral = stringLiteral(0);
				 ((ExpressionContext)_localctx).expressionExpr =  ((ExpressionContext)_localctx).stringLiteral.stringExpr; 
				}
				break;
			case 3:
				{
				setState(71);
				((ExpressionContext)_localctx).intLiteral = intLiteral();
				 ((ExpressionContext)_localctx).expressionExpr =  ((ExpressionContext)_localctx).intLiteral.intExpr; 
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(98);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(96);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(76);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(77);
						((ExpressionContext)_localctx).comparator = compareOp();
						setState(78);
						((ExpressionContext)_localctx).right = expression(7);
						 ((ExpressionContext)_localctx).expressionExpr =  new Compare(((ExpressionContext)_localctx).comparator.comparator, ((ExpressionContext)_localctx).left.expressionExpr, ((ExpressionContext)_localctx).right.expressionExpr); 
						}
						break;
					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(81);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(82);
						match(T__1);
						setState(83);
						((ExpressionContext)_localctx).right = expression(4);
						 ((ExpressionContext)_localctx).expressionExpr =  new Arithmetics(Operator.Add, ((ExpressionContext)_localctx).left.expressionExpr, ((ExpressionContext)_localctx).right.expressionExpr); 
						}
						break;
					case 3:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(86);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(87);
						match(T__2);
						setState(88);
						((ExpressionContext)_localctx).right = expression(3);
						 ((ExpressionContext)_localctx).expressionExpr =  new Arithmetics(Operator.Sub, ((ExpressionContext)_localctx).left.expressionExpr, ((ExpressionContext)_localctx).right.expressionExpr); 
						}
						break;
					case 4:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(91);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(92);
						match(T__3);
						setState(93);
						((ExpressionContext)_localctx).right = expression(2);
						 ((ExpressionContext)_localctx).expressionExpr =  new Arithmetics(Operator.Mul, ((ExpressionContext)_localctx).left.expressionExpr, ((ExpressionContext)_localctx).right.expressionExpr); 
						}
						break;
					}
					} 
				}
				setState(100);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public Expr assignmentExpr;
		public Token ID;
		public ExpressionContext expression;
		public TerminalNode ID() { return getToken(PLParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			((AssignmentContext)_localctx).ID = match(ID);
			setState(102);
			match(T__4);
			setState(103);
			((AssignmentContext)_localctx).expression = expression(0);
			 ((AssignmentContext)_localctx).assignmentExpr =  new Assign((((AssignmentContext)_localctx).ID!=null?((AssignmentContext)_localctx).ID.getText():null), ((AssignmentContext)_localctx).expression.expressionExpr); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintContext extends ParserRuleContext {
		public Expr printExpr;
		public ExpressionContext expression;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(T__5);
			setState(107);
			match(T__6);
			setState(108);
			((PrintContext)_localctx).expression = expression(0);
			setState(109);
			match(T__7);
			 ((PrintContext)_localctx).printExpr =  new PrintExpr(((PrintContext)_localctx).expression.expressionExpr); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForLoopContext extends ParserRuleContext {
		public Expr forLoopExpr;
		public Token ID;
		public IntLiteralContext begin;
		public IntLiteralContext end;
		public BlockContext block;
		public TerminalNode ID() { return getToken(PLParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<IntLiteralContext> intLiteral() {
			return getRuleContexts(IntLiteralContext.class);
		}
		public IntLiteralContext intLiteral(int i) {
			return getRuleContext(IntLiteralContext.class,i);
		}
		public ForLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forLoop; }
	}

	public final ForLoopContext forLoop() throws RecognitionException {
		ForLoopContext _localctx = new ForLoopContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_forLoop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__8);
			setState(113);
			match(T__6);
			setState(114);
			((ForLoopContext)_localctx).ID = match(ID);
			setState(115);
			match(T__9);
			setState(116);
			((ForLoopContext)_localctx).begin = intLiteral();
			setState(117);
			match(T__10);
			setState(118);
			((ForLoopContext)_localctx).end = intLiteral();
			setState(119);
			match(T__7);
			setState(120);
			match(T__11);
			setState(121);
			((ForLoopContext)_localctx).block = block();
			setState(122);
			match(T__12);
			 ((ForLoopContext)_localctx).forLoopExpr =  new ForLoop((((ForLoopContext)_localctx).ID!=null?((ForLoopContext)_localctx).ID.getText():null), ((ForLoopContext)_localctx).begin.intExpr, ((ForLoopContext)_localctx).end.intExpr, ((ForLoopContext)_localctx).block.blockExpr); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfElseContext extends ParserRuleContext {
		public Expr ifElseExpr;
		public ExpressionContext condition;
		public BlockContext trueBlock;
		public BlockContext falseBlock;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public IfElseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifElse; }
	}

	public final IfElseContext ifElse() throws RecognitionException {
		IfElseContext _localctx = new IfElseContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ifElse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(T__13);
			setState(126);
			match(T__6);
			setState(127);
			((IfElseContext)_localctx).condition = expression(0);
			setState(128);
			match(T__7);
			setState(129);
			match(T__11);
			setState(130);
			((IfElseContext)_localctx).trueBlock = block();
			setState(131);
			match(T__12);
			setState(132);
			match(T__14);
			setState(133);
			match(T__11);
			setState(134);
			((IfElseContext)_localctx).falseBlock = block();
			setState(135);
			match(T__12);
			 ((IfElseContext)_localctx).ifElseExpr =  new Ifelse(((IfElseContext)_localctx).condition.expressionExpr, ((IfElseContext)_localctx).trueBlock.blockExpr, ((IfElseContext)_localctx).falseBlock.blockExpr); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompareOpContext extends ParserRuleContext {
		public Comparator comparator;
		public CompareOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compareOp; }
	}

	public final CompareOpContext compareOp() throws RecognitionException {
		CompareOpContext _localctx = new CompareOpContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_compareOp);
		try {
			setState(150);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__15:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				match(T__15);
				 ((CompareOpContext)_localctx).comparator =  Comparator.LT; 
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				match(T__16);
				 ((CompareOpContext)_localctx).comparator =  Comparator.LE; 
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 3);
				{
				setState(142);
				match(T__17);
				 ((CompareOpContext)_localctx).comparator =  Comparator.GT; 
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 4);
				{
				setState(144);
				match(T__18);
				 ((CompareOpContext)_localctx).comparator =  Comparator.GE; 
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 5);
				{
				setState(146);
				match(T__19);
				 ((CompareOpContext)_localctx).comparator =  Comparator.EQ; 
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 6);
				{
				setState(148);
				match(T__20);
				 ((CompareOpContext)_localctx).comparator =  Comparator.NE; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncDeclContext extends ParserRuleContext {
		public Expr funcResult;
		public Token funcName;
		public ParamListContext params;
		public BlockContext body;
		public TerminalNode ID() { return getToken(PLParser.ID, 0); }
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FuncDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDecl; }
	}

	public final FuncDeclContext funcDecl() throws RecognitionException {
		FuncDeclContext _localctx = new FuncDeclContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_funcDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(T__21);
			setState(153);
			((FuncDeclContext)_localctx).funcName = match(ID);
			setState(154);
			match(T__6);
			setState(155);
			((FuncDeclContext)_localctx).params = paramList();
			setState(156);
			match(T__7);
			setState(157);
			match(T__11);
			setState(158);
			((FuncDeclContext)_localctx).body = block();
			setState(159);
			match(T__12);
			 ((FuncDeclContext)_localctx).funcResult =  new Declare((((FuncDeclContext)_localctx).funcName!=null?((FuncDeclContext)_localctx).funcName.getText():null), ((FuncDeclContext)_localctx).params.paramsList, ((FuncDeclContext)_localctx).body.blockExpr); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncInvokeContext extends ParserRuleContext {
		public Expr invokeResult;
		public Token funcName;
		public ArgListContext args;
		public TerminalNode ID() { return getToken(PLParser.ID, 0); }
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public FuncInvokeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcInvoke; }
	}

	public final FuncInvokeContext funcInvoke() throws RecognitionException {
		FuncInvokeContext _localctx = new FuncInvokeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_funcInvoke);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			((FuncInvokeContext)_localctx).funcName = match(ID);
			setState(163);
			match(T__6);
			setState(164);
			((FuncInvokeContext)_localctx).args = argList();
			setState(165);
			match(T__7);
			 ((FuncInvokeContext)_localctx).invokeResult =  new Invoke((((FuncInvokeContext)_localctx).funcName!=null?((FuncInvokeContext)_localctx).funcName.getText():null), ((FuncInvokeContext)_localctx).args.argsList); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamListContext extends ParserRuleContext {
		public List<String> paramsList;
		public Token id1;
		public Token ID;
		public List<Token> id2 = new ArrayList<Token>();
		public List<TerminalNode> ID() { return getTokens(PLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PLParser.ID, i);
		}
		public ParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramList; }
	}
